grammar.js
    source_file: $ => optional(choice(
      repeat1(choice(
        $.module_extension_definition,
        $.module_definition,
        $.address_block,
      )),
      repeat1($._snippet_item),
    )),

    // Legacy address blocks: `address 0x42 { module m { ... } }`. Still parsed
    // by the Move compiler, so accept them for editor robustness.
    address_block: $ => seq(
      'address',
      field('address', choice($.num_literal, $._module_identifier)),
      '{',
      repeat(choice($.module_definition, $.module_extension_definition)),
      '}',
    ),

    // Code fragments as emitted by the move-analyzer hover provider (DefInfo's
    // Display impl). Supporting them at the top level lets a ```move fence in
    // hover/documentation markdown parse and highlight cleanly without being
    // wrapped in a module.
    //
    // MEASURED COST (backlog C9): this layer accounts for roughly a quarter of
    // all parser states and a third of parser.c, plus the conflicts marked
    // [hover] above. If that ever becomes a problem, the intended path is a
    // define-grammar(options) factory building a snippet-free parser for
    // prettier-move's wasm and the full one for editors — not deleting the
    // layer.
    _snippet_item: $ => choice(
      $.hover_function,
      $.hover_struct,
      $.hover_enum,
      $.hover_variant,
      $.hover_const,
      $.hover_local,
      $.hover_module,
      $._type,
    ),

    // Qualified-name prefix like `sui::coin::` or `0x2::coin::` used by hover
    // signatures, which always render fully-qualified member names.
    _hover_path_segment: $ => seq(
      field('path', choice($.num_literal, alias($.identifier, $.module_identifier))),
      '::',
    ),

    hover_function: $ => seq(
      optional($.modifier),
      optional($.modifier),
      optional('macro'),
      'fun',
      repeat($._hover_path_segment),
      field('name', $._function_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.function_parameters),
      optional(field('return_type', $.ret_type)),
    ),

    hover_struct: $ => seq(
      optional($.modifier),
      'struct',
      repeat($._hover_path_segment),
      field('name', $._struct_identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('ability_declarations', $.ability_decls)),
      field('struct_fields', $.datatype_fields),
    ),

    hover_enum: $ => seq(
      optional($.modifier),
      'enum',
      repeat($._hover_path_segment),
      field('name', $._enum_identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('ability_declarations', $.ability_decls)),
      field('enum_variants', $.enum_variants),
    ),

    // `pkg::mod::Enum::Variant(u64)` / `pkg::mod::Enum::Variant{ x: u64 }`.
    // Builds its own path (rather than reusing module_access) so the parser
    // can fork between this and a bare type followed by a tuple type; the
    // dynamic precedence then prefers the variant reading.
    hover_variant: $ => prec.dynamic(1, seq(
      repeat1($._hover_path_segment),
      field('variant', alias($.identifier, $.variant_identifier)),
      field('fields', $.datatype_fields),
    )),

    hover_const: $ => seq(
      'const',
      repeat($._hover_path_segment),
      field('name', alias($.identifier, $.constant_identifier)),
      ':',
      field('type', $._type),
      optional(seq('=', field('expr', choice($._expression, $.literal_list)))),
      optional(';'),
    ),

    // Constant values of vector type render as `[1, 2, 3]` (nested for
    // multi-dimensional vectors) in hover.
    literal_list: $ => seq('[', sepBy(',', choice($._expression, $.literal_list)), ']'),

    hover_local: $ => choice(
      seq('let', optional('mut'), field('name', $._variable_identifier), ':', field('type', $._type)),
      seq('mut', field('name', $._variable_identifier), ':', field('type', $._type)),
      seq(field('name', $._variable_identifier), ':', field('type', $._type)),
      // positional field hover: `0: u64`
      seq(field('name', $.num_literal), ':', field('type', $._type)),
    ),

    hover_module: $ => seq('module', $.module_identity),

    // parse use declarations
    friend_declaration: $ => seq('friend', field('module', $.friend_access), ';'),
    modifier: $ => choice(
      seq(
        'public',
        optional(seq(
          '(',
          choice(
            'package',
            'friend',
          ),
          ')',
        ))),
      'entry',
      'native',
    ),
    ability: $ => choice(
      'copy',
      'drop',
      'store',
      'key',
    ),

    module_extension_definition: $ => {
      return seq(
        'extend',
        field('module', $.module_definition),
      );
    },

    module_definition: $ => {
      return seq(
        'module',
        // The bare-identifier form covers legacy modules inside `address` blocks.
        field('module_identity', choice($.module_identity, $._module_identifier)),
        field('module_body', $.module_body),
      );
    },
    module_body: $ => {
      const item = choice(
        $.use_declaration,
        $.friend_declaration,
        $.constant,
        $._function_item,
        $._struct_item,
        $._enum_item,
        $.spec_block,
      );
      // prec.right so that after `module a::b;` subsequent items are consumed
      // into the module body rather than parsed as top-level snippet items.
      return choice(
        prec.right(seq(';', repeat(item))),
        seq('{', repeat(item), '}'),
      );
    },

    // Annotations
    datatype_fields: $ => choice(
      $.positional_fields,
      $.named_fields,
    ),
    positional_fields: $ => seq(
      '(',
      sepBy(',', $._type),
      ')'
    ),
    named_fields: $ => seq(
      '{',
      sepBy(',', $.field_annotation),
      '}'
    ),

    // Enum definitions
    _enum_item: $ => choice(
      $.enum_definition,
    ),
    enum_variants: $ => seq(
      '{',
      sepBy(',', $.variant),
      '}'
    ),
    variant: $ => seq(
      field('variant_name', $._variant_identifier),
      optional(field('fields', $.datatype_fields)),
    ),

    // Struct definitions
    _struct_item: $ => choice(
      $.native_struct_definition,
      $.struct_definition,
    ),
    struct_definition: $ => seq(
      optional('public'),
      $._struct_signature,
      field('struct_fields', $.datatype_fields),
      optional(field('postfix_ability_declarations', $.postfix_ability_decls)),
      // positional structs without postfix abilities end in `;`: `struct P(u64);`
      optional(';'),
    ),
    field_annotation: $ => seq(
      // numeric names cover positional fields as rendered in IDE hover
      // signatures (`0: u64`)
      field('field', choice($._field_identifier, $.num_literal)),
      ':',
      field('type', $._type),
    ),
    // ability lists cannot be empty; trailing commas are tolerated because
    // prettier-move deliberately formats them away
    ability_decls: $ => seq(
      'has',
      sepBy1(',', $.ability),
    ),
    _struct_signature: $ => seq(
      'struct',
      field('name', $._struct_identifier),
      optional(field('type_parameters', $.type_parameters)),
      optional(field('ability_declarations', $.ability_decls)),
    ),

    // Function definitions
    _function_item: $ => choice(
      $.native_function_definition,
      $.native_macro_function_definition,
      $.macro_function_definition,
      $.function_definition,
    ),
    native_function_definition: $ => seq(
      $._function_signature,
      ';'
    ),
    native_macro_function_definition: $ => seq(
      optional($.modifier),
      'macro',
      $._macro_signature,
      ';'
    ),
    _macro_signature: $ => seq(
      optional($.modifier),
      'fun',
      field('name', $._function_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.function_parameters),
      optional(field('return_type', $.ret_type)),
    ),
    function_definition: $ => seq(
      $._function_signature,
      field('body', $.block)
    ),
    _function_signature: $ => seq(
      repeat($.modifier),
      'fun',
      field('name', $._function_identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.function_parameters),
      optional(field('return_type', $.ret_type)),
    ),
    function_parameters: $ => seq(
      '(',
      sepBy(',', choice($.mut_function_parameter, $.function_parameter)),
      ')',
    ),

    // Spec block start
    _type: $ => choice(
      $.apply_type,
      $.ref_type,
      $.tuple_type,
      $.function_type,
      $.primitive_type,
    ),
    apply_type: $ => prec.left(PRECEDENCE.apply_type, seq(
      $.module_access,
      optional(field('type_arguments', $.type_arguments)),
    )),
    ref_type: $ => seq(
      $._reference,
      $._type
    ),
    tuple_type: $ => seq('(', sepBy(',', $._type), ')'),
    primitive_type: $ => choice(
      'u8',
      'u16',
      'u32',
      'u64',
      'u128',
      'u256',
      'bool',
      'address',
      'signer',
    ),
    ret_type: $ => seq(':', $._type),

    // Unified name-access chain (the compiler's NameAccessChain model): any
    // number of `module:`-tagged prefix segments, each optionally carrying
    // type arguments, ending in a `member:`. `a::b` is module::member,
    // `a::b::C::D` is module::module::module::member — semantic roles
    // (module vs enum vs variant) are a naming-convention concern for
    // queries, exactly as in the compiler's AST. The dynamic precedence
    // prefers the path/type-arguments reading over `<`/`>` comparisons.
    module_access: $ => choice(
      // macro variable access
      seq('$', field('member', $.identifier)),
      // address access
      seq('@', field('member', $.identifier)),
      seq(
        field('member', alias($._reserved_identifier, $.identifier)),
        optional(field('type_arguments', $.type_arguments)),
      ),
      seq(
        field('member', $.identifier),
        optional(field('type_arguments', $.type_arguments)),
      ),
      prec.dynamic(1, seq(
        repeat1(choice(
          // a leading numeric address takes no type arguments
          seq(field('module', $.num_literal), '::'),
          seq(
            field('module', $._module_identifier),
            optional(field('type_arguments', $.type_arguments)),
            '::',
          ),
        )),
        field('member', $.identifier),
        optional(field('type_arguments', $.type_arguments)),
      )),
    ),

    friend_access: $ => choice(
      field('local_module', $.identifier),
      field('fully_qualified_module', $.module_identity),
      // `friend a::m::foo;` parses in the compiler (and errors later).
      seq(field('fully_qualified_module', $.module_identity), '::', field('member', $.identifier)),
    ),

    macro_module_access: $ => seq(field("access", $.module_access), "!"),

    module_identity: $ =>
      seq(
        field('address', choice($.num_literal, $._module_identifier)),
        '::',
        field('module', $._module_identifier)
      ),

    // KNOWN DIVERGENCE (backlog P6): the compiler only reads `<` as type
    // arguments in expression position when it is ADJACENT to the name, so
    // `h(a < b, c > (d))` is two comparisons. token.immediate cannot express
    // this here because whitespace is an extras token (once the whitespace
    // token is shifted, `<` is "immediate" again); the fix would need the
    // scanner to own whitespace and track adjacency state. See
    // test/corpus/known_failures.txt.
    type_arguments: $ => seq(
      '<',
      sepBy1(',', $._type),
      '>'
    ),

    function_type: $ => seq(
      field('param_types', $.function_type_parameters),
      optional(
        seq(
          '->',
          field('return_type', $._type)
        )
      )
    ),
    function_type_parameters: $ => seq('|', sepBy(',', $._type), '|'),

    // `mut <function_parameter>`
    function_parameter: $ => seq(
      choice(
        field('name', $._variable_identifier),
        seq('$', field('name', $._variable_identifier)),
      ),
      ':',
      field('type', $._type),
    ),

    // type parameter grammar; the parameter list may be empty (`struct S<>()`)
    type_parameters: $ => seq('<', sepBy(',', $.type_parameter), '>'),
    type_parameter: $ => seq(
      optional('phantom'),
      optional('$'),
      $._type_parameter_identifier,
      optional(seq(':',
        sepByStrict1('+', $.ability)
      ))
    ),

    // Block

    block: $ => seq(
      '{',
      repeat($.use_declaration),
      repeat($.block_item),
      optional($._expression),
      '}'
    ),
    block_item: $ => seq(
      choice(
        $._expression,
        $.let_statement,
      ),
      ';'
    ),
    let_statement: $ => seq(
      'let',
      field('binds', $.bind_list),
      optional(seq(':', field('type', $._type))),
      optional(seq('=', field('expr', $._expression)))
    ),
    // Block end


    // Expression

    _expression: $ => choice(
      $.call_expression,
      $.macro_call_expression,
      $.lambda_expression,
      $.if_expression,
      $.while_expression,
      $.return_expression,
      $.abort_expression,
      $.assign_expression,
      // unary expression is included in binary_op,
      $._unary_expression,
      $.binary_expression,
      $.cast_expression,
      $.quantifier_expression,
      $.match_expression,
      $.vector_expression,
      $.loop_expression,
      $.identified_expression,
    ),

    identified_expression: $ => choice(
      seq(field('expression_id', $.block_identifier), $._expression),
      prec(PRECEDENCE.block_tail,
        seq(field('expression_id', $.block_identifier), $.block)),
    ),

    // `vector` here is the external-scanner token, emitted only when followed
    // by `[` or `<` (see src/scanner.c), so this cannot shadow ordinary uses
    // of `vector` as a module name.
    lambda_expression: $ => seq(
      field('bindings', $.lambda_bindings),
      optional(seq('->', $._type)),
      field('expr', $._expression)
    ),
    // A lambda parameter is any bind list — including a parenthesized tuple —
    // optionally type-ascribed: `|(a, b): (u64, u64)| ...`.
    lambda_binding: $ => seq(
      choice($.comma_bind_list, field('bind', $._bind)),
      optional(seq(':', field('ty', $._type))),
    ),
    lambda_bindings: $ => seq(
      '|',
      sepBy(',', $.lambda_binding),
      '|'
    ),
    // if-else expression. Each control expression has a block_tail variant:
    // when its final slot is a bare block, the whole expression terminates
    // before any binary operator (the compiler's ends_in_block rule).
    while_expression: $ => choice(
      seq('while', '(', field('eb', $._expression), ')', field('body', $._expression)),
      prec(PRECEDENCE.block_tail,
        seq('while', '(', field('eb', $._expression), ')', field('body', $.block))),
    ),

    // loop expression
    loop_expression: $ => choice(
      seq('loop', field('body', $._expression)),
      prec(PRECEDENCE.block_tail, seq('loop', field('body', $.block))),
    ),

    // return expression
    call_expression: $ => prec.dynamic(1, seq(
      $.name_expression,
      field('args', $.arg_list),
    )),
    macro_call_expression: $ => seq(
      field('access', $.macro_module_access),
      optional(field('type_arguments', $.type_arguments)),
      field('args', $.arg_list),
    ),
    name_expression: $ => seq(
      optional('::'),
      field('access', $.module_access),
    ),

    _reference: $ => choice(
      $.imm_ref,
      $.mut_ref,
    ),

    break_expression: $ => seq(
      'break',
      optional(field('label', $.label)),
      optional(field('break', $._expression))
    ),
    continue_expression: $ => seq(
      'continue',
      optional(field('label', $.label)),
    ),
